Add Windows USB spooler printing v1.1.0
